test/ui/lowering/toplevel-obligatory-annotations.stderr
error[E015]: the function ‘number’ does not have a type annotation
  ┌─ ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:7:7
  │
7 │ number = 0
  │      ⟫⟪ missing required type annotation
  │
 help: annotate the declaration with a type
  ┌─ ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:7:7
  │
7 │ number: Type = 0
  │       ~~~~~~

error[E015]: the function ‘apply’ does not have a type annotation
  ┌─ ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:9:14
  │
9 │ apply f x (y) = f x
  │             ⟫⟪ missing required type annotation
  │
 help: annotate the declaration with a type
  ┌─ ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:9:14
  │
9 │ apply f x (y): Type = f x
  │              ~~~~~~

error: aborting due to 2 previous errors

